unpackaged/main/default/objects/CS_Custom_Settings__c/CS_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>&quot;Custom&quot; Custom Settings for Media Platform</description>
    <label>CS Custom Settings</label>
</CustomObject>