unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Ad_Server_Integration_user__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server_Integration_user__c</fullName>
    <description>Ad Server integration User</description>
    <inlineHelpText>Ad Server integration User</inlineHelpText>
    <label>Ad Server Integration user</label>
    <length>20</length>
    <type>Text</type>
</CustomField>