unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Ad_Server_Network_Code__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server_Network_Code__c</fullName>
    <description>Ad Server Network Code used on Batch classes</description>
    <inlineHelpText>Ad Server Network Code used on Batch classes</inlineHelpText>
    <label>Ad Server Network Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>