unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Ad_server_salesforce_id__c.field-meta.xml
<CustomField>
    <fullName>Ad_server_salesforce_id__c</fullName>
    <label>Ad server salesforce id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>