unpackaged/main/default/objects/CS_Custom_Settings__c/fields/BillingBatchSize__c.field-meta.xml
<CustomField>
    <fullName>BillingBatchSize__c</fullName>
    <description>The batch size for Billing/Revenue Schedule Items when the are created through Asynchronous process instead of Synchronous process.</description>
    <label>BillingBatchSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>