unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Cancel_Retraction_cut_off_date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Retraction_cut_off_date__c</fullName>
    <description>Field used to prevent user of doing Cancel Retract.</description>
    <inlineHelpText>Field used to prevent user of doing Cancel Retract.</inlineHelpText>
    <label>Cancel Retraction cut-off date</label>
    <type>DateTime</type>
</CustomField>