unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Configurator_Service_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Configurator_Service_Certificate__c</fullName>
    <label>Configurator Service Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>