unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Consolidation_Size__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_Size__c</fullName>
    <defaultValue>25</defaultValue>
    <label>Consolidation Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>