unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <description>Number of days that identifies if a Sales Order BSI/RSI should be calculated asynchronously.</description>
    <label>Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>