unpackaged/main/default/objects/CS_Custom_Settings__c/fields/DFP_Actuals_Rolling_Days__c.field-meta.xml
<CustomField>
    <fullName>DFP_Actuals_Rolling_Days__c</fullName>
    <defaultValue>3</defaultValue>
    <label>DFP Actuals Rolling Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>