unpackaged/main/default/objects/CS_Custom_Settings__c/fields/DFP_Playlist_Folder__c.field-meta.xml
<CustomField>
    <fullName>DFP_Playlist_Folder__c</fullName>
    <description>Comma-delimited list of DFP keys that hold playlist values.</description>
    <inlineHelpText>Comma-delimited list of DFP keys that hold playlist values.</inlineHelpText>
    <label>DFP Playlist Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>