unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Disable_Validation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to override the validation rule which is in place  tp prevent the changes to billing and revenue recognition records once after set to  Closed status.</description>
    <inlineHelpText>This field is to override the validation rule which is in place  tp prevent the changes to billing and revenue recognition records once after set to  Closed status.</inlineHelpText>
    <label>Disable Validation</label>
    <type>Checkbox</type>
</CustomField>