unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Earliest_Start_Days__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Start_Days__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Number of days from Today that configuration needs to start.</description>
    <inlineHelpText>Number of days from Today that configuration needs to start.</inlineHelpText>
    <label>Earliest Start Days</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>