unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Fulfilment_Item_Propert_Map_Key__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Item_Propert_Map_Key__c</fullName>
    <inlineHelpText>The unique key of the property map used to map Fulfilment Item fields to Config Attributes.</inlineHelpText>
    <label>Fulfilment Item Propert Map Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>