unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Fulfilment_Item_Update_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Item_Update_Batch_Size__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Fulfilment Item Update Batch Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>