unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Ignore_Quantity_Validation__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Quantity_Validation__c</fullName>
    <label>Ignore Quantity Validation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>