unpackaged/main/default/objects/CS_Custom_Settings__c/fields/IgnoreCLT__c.field-meta.xml
<CustomField>
    <fullName>IgnoreCLT__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked DFP Creative Level Targetings will be ignored.</description>
    <inlineHelpText>If checked DFP Creative Level Targetings will be ignored.</inlineHelpText>
    <label>Ignore Creative Level Targeting</label>
    <type>Checkbox</type>
</CustomField>