unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Integration_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>Integration_Chunk_Size__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Integration Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>