unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Integration_Delay_Between_Callouts__c.field-meta.xml
<CustomField>
    <fullName>Integration_Delay_Between_Callouts__c</fullName>
    <description>Integration Delay Between Callouts (milliseconds)</description>
    <inlineHelpText>Integration Delay Between Callouts (milliseconds)</inlineHelpText>
    <label>Integration Delay Between Callouts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>