unpackaged/main/default/objects/CS_Custom_Settings__c/fields/IO_Volume_Discount_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>IO_Volume_Discount_Tolerance__c</fullName>
    <label>IO Volume Discount Tolerance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>