unpackaged/main/default/objects/CS_Custom_Settings__c/fields/KeyValue_configuration__c.field-meta.xml
<CustomField>
    <fullName>KeyValue_configuration__c</fullName>
    <defaultValue>&#39;ID&#39;</defaultValue>
    <description>Defines the way KeyValue configuration is stored. Possible values are: string or ID</description>
    <inlineHelpText>Defines the way KeyValue configuration is stored. Possible values are: string or ID</inlineHelpText>
    <label>KeyValue configuration</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>