unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Max_n_Lines_for_Sync_Execution__c.field-meta.xml
<CustomField>
    <fullName>Max_n_Lines_for_Sync_Execution__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Custom Setting for max number of lines that will be executed synchronous, grater than that it will be executed in future method.</description>
    <inlineHelpText>Custom Setting for max number of lines that will be executed synchronous, grater than that it will be executed in future method.</inlineHelpText>
    <label>Max n Lines for Sync Execution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>