unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Max_n_Templates_for_Sync_Execution__c.field-meta.xml
<CustomField>
    <fullName>Max_n_Templates_for_Sync_Execution__c</fullName>
    <label>Max n Templates for Sync Execution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>