unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Maximum_Production_Cost__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Production_Cost__c</fullName>
    <label>Maximum Production Cost</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>