unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Podcast_Template_Types__c.field-meta.xml
<CustomField>
    <fullName>Podcast_Template_Types__c</fullName>
    <label>Podcast Template Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>