unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Schedule_Item_Map__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Item_Map__c</fullName>
    <label>Schedule Item Map</label>
    <length>255</length>
    <type>Text</type>
</CustomField>