unpackaged/main/default/objects/CS_Custom_Settings__c/fields/SOLI_Billing_Rev_Schedule_Property_Map__c.field-meta.xml
<CustomField>
    <fullName>SOLI_Billing_Rev_Schedule_Property_Map__c</fullName>
    <defaultValue>&quot;SOLIToBillingSchedule&quot;</defaultValue>
    <description>The unique key for the property map used to map Sales Order Line values to Billing and Revenue Schedules</description>
    <inlineHelpText>The unique key for the property map used to map Sales Order Line (Product Configuration)  values to Billing and Revenue Schedules</inlineHelpText>
    <label>SOLI Billing Rev Schedule Property Map</label>
    <length>80</length>
    <type>Text</type>
</CustomField>