unpackaged/main/default/objects/CS_Custom_Settings__c/fields/Sync_Retraction_SOLI_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sync_Retraction_SOLI_Limit__c</fullName>
    <description>If number of SOLIs below limit then they will be executed synchronously, otherwise they will be executed through batch.</description>
    <inlineHelpText>If number of SOLIs below limit then they will be executed synchronously, otherwise they will be executed through batch.</inlineHelpText>
    <label>Sync Retraction SOLI Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>