unpackaged/main/default/objects/CS_Custom_Settings__c/fields/X3rd_Party_Actuals_Rolling_Days__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Actuals_Rolling_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <label>3rd Party Actuals Rolling Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>